--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
 server.servlet.context-path=/api
+
+jwt.secret=weouyr498wJKDHF348hKJDHG84kGhjkLKDSJF84uSLDKF
+jwt.expiration=1800000
