--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,7 @@ databaseChangeLog:
       file: /db/changelog/changes/04-create-users-roles-table.yaml
   - include:
       file: /db/changelog/changes/05-insert-roles-to-roles-table.yaml
+  - include:
+      file: /db/changelog/changes/06-insert-users-to-users-table.yaml
+  - include:
+      file: /db/changelog/changes/07-insert-cars-to-cars-table.yaml
