--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: /db/changelog/changes/06-insert-users-to-users-table.yaml
   - include:
       file: /db/changelog/changes/07-insert-cars-to-cars-table.yaml
+  - include:
+      file: /db/changelog/changes/08-create-rentals-table.yaml
