Implemented environment variables instead of dummy data

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=username
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-jwt.secret=weouyr498wJKDHF348hKJDHG84kGhjkLKDSJF84uSLDKF
+jwt.secret=${JWT_SECRET}
 jwt.expiration=1800000
