--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/rent_car?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?serverTimeZone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.username=${MYSQLDB_USER}
+spring.datasource.password=${MYSQLDB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
@@ -9,5 +9,5 @@ spring.jpa.open-in-view=false
 
 server.servlet.context-path=/api
 
-jwt.secret=weouyr498wJKDHF348hKJDHG84kGhjkLKDSJF84uSLDKF
+jwt.secret=${JWT_SECRET}
 jwt.expiration=1800000
