--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>6.0.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
