--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,12 @@
             <version>6.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>25.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
