--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: /db/changelog/changes/07-insert-cars-to-cars-table.yaml
   - include:
       file: /db/changelog/changes/08-create-rentals-table.yaml
+  - include:
+      file: /db/changelog/changes/09-create-payments-table.yaml
