Implemented Tests for Repository layer - Payment and User

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=username
+spring.datasource.url=jdbc:tc:mysql:8.2.0:///test-car-rent
+spring.datasource.username=root
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 jwt.secret=${JWT_SECRET}
 jwt.expiration=1800000
